# Android-Platform-NDK

./: .gitignore  CHANGELOG.md  OWNERS  README.md  checkbuild.py  config.py  do_checkbuild.py  do_runtests.py  mypy.ini  navbar.md  ndk-gdb  ndk-gdb.py  ndk-stack  ndk-stack.py  ndk-which  ndkgdb.py  ndkstack.py  parse_elfnote.py  pylintrc  pyproject.toml  qa_config.json  run_tests.py  setup.py
bootstrap/: __init__.py
docs/: Architecture.md  BuildSystemMaintainers.md  Building.md  ClangMigration.md  Onboarding.md  PlatformApis.md  Roadmap.md  Testing.md  Toolchains.md  UnifiedHeaders.md  repo.md
docs/changelogs/: Changelog-r19.md  Changelog-r20.md  Changelog-r21.md  Changelog-r22.md  Changelog-r23.md  Changelog-r24.md  Changelog-r25.md  Changelog-r26.md  Changelog-r27.md
docs/user/: StandaloneToolchains.md  common_problems.md  cpp-support.md  middleware_vendors.md  standalone_toolchain.md
infra/docker/: Dockerfile
meta/: abis.json  platforms.json  system_libs.json
ndk/: abis.py  ansi.py  archive.py  autoconf.py  bootstrap.py  builds.py  checkbuild.py  cmake.py  config.py  crtobjectbuilder.py  debug.py  deps.py  file.py  graph.py  hosts.py  ndkbuild.py  ndkversionheadergenerator.py  notify.py  packaging.py  paths.py  platforms.py  pythonenv.py  run_tests.py  termcolor.py  test_deps.py  test_graph.py  test_ndkversionheadergenerator.py  timer.py  toolchains.py  ui.py  win32.py  workqueue.py
ndk/ext/: os.py  shutil.py  subprocess.py  test_os.py
ndk/test/: builder.py  config.py  devices.py  filters.py  printers.py  report.py  result.py  scanner.py  spec.py  suites.py  test_devices.py  test_filters.py  test_paths.py  test_report.py  test_spec.py  test_workqueue.py  types.py  ui.py
ndk/test/buildtest/: case.py  scanner.py
ndk/test/devicetest/: case.py  scanner.py
ndk/testing/: flag_verifier.py  standalone_toolchain.py
ndk/tools/: ndkgitprebuilts.py
samples/NdkGdbSample/: AndroidManifest.xml  README.md  build.gradle  jni  obj
samples/NdkGdbSample/app/: build.gradle
samples/NdkGdbSample/gradle/wrapper/: gradle-wrapper.properties
scripts/: create_windows_instance.py  find_non_universal_binaries.sh  gen_release_table.py  kokoro_api.proto  kokoro_api_pb2.py  update_dac.py  update_kokoro_prebuilts.py
sources/android/cpufeatures/: cpu-features.c
sources/android/support/: Android.mk
sources/android/support/include/: stdlib.h
sources/crt/: crtbrand.S
sources/cxx-stl/llvm-libc++/: build.py
sources/host-tools/gdb-stub/: gdb-stub.c
sources/host-tools/make-3.81/: build.py
sources/host-tools/ndk-depends/: GNUmakefile
sources/host-tools/ndk-stack/: GNUmakefile
sources/host-tools/toolbox/: build-toolbox.sh  build.py  cmp_win.c  echo_win.c
tests/: testlib.py
tests/device/: tradefed-template.xml
tests/device/android_support/: test_config.py
tests/device/android_support/jni/: Android.mk
tests/device/asan-smoke/: test_config.py
tests/device/asan-smoke/jni/: asan_oob_test.cc
tests/device/b8708181-Vector4/: test_config.py
tests/device/b8708181-Vector4/jni/: Vector4.cpp
tests/device/clone/: test_config.py
tests/device/clone/jni/: clone.c
tests/device/cmake_gtest/: CMakeLists.txt  foo.cpp
tests/device/emm/: test_config.py
tests/device/emutls-dealloc/: test_config.py
tests/device/emutls-dealloc/jni/: Android.mk  Application.mk  pthread_test.cpp  tls_var.cpp
tests/device/emutls-key-deletion/jni/: Android.mk  direct_main.cpp  dlclose_main.cpp  test_core.cpp
tests/device/fortify_runtime/: test_config.py
tests/device/fortify_runtime/jni/: Android.mk  fortify_test.cpp
tests/device/fortify_strcpy_unavailable/: CMakeLists.txt  test_config.py
tests/device/fuzzer/: test_config.py
tests/device/fuzzer/jni/: Android.mk  Application.mk  fuzz_test.cpp  fuzz_test_wrapper.cpp
tests/device/gtest/: test_config.py
tests/device/gtest/jni/: Application.mk
tests/device/hwasan-smoke/: CMakeLists.txt  test_config.py
tests/device/hwasan-smoke/jni/: Android.mk  Application.mk  hwasan_oob_test.cc
tests/device/issue19851-sigsetjmp/jni/: issue19851-sigsetjmp.c
tests/device/math/: test_config.py
tests/device/openmp/: CMakeLists.txt
tests/device/openmp/jni/: Android.mk  fib.c  openmp2.c
tests/device/openmp_shared/jni/: Android.mk
tests/device/polly/: CMakeLists.txt
tests/device/polly/jni/: Android.mk
tests/device/rs-cpp-basic/: test_config.py
tests/device/rs-cpp-basic/jni/: Android.mk
tests/device/stack_alignment/jni/: Android.mk  stack_alignment.cpp
tests/device/static-executable/: test_config.py
tests/device/static-executable-exceptions/: test_config.py
tests/device/static-executable/jni/: Application.mk
tests/device/static_exe_lto/jni/: Android.mk  foo.cpp
tests/device/test-cpufeatures/jni/: test_android_setCpu_1.c  test_android_setCpu_2.c  test_arm_idiv.c  test_cpufeatures.c
tests/device/thinlto-no-rtti/: CMakeLists.txt
tests/device/thinlto-no-rtti/jni/: test.h  test1.cpp  test2.cpp  test3.cpp
tests/device/thread_local_dlclose/: CMakeLists.txt
tests/device/thread_local_dlclose/jni/: Android.mk  Application.mk  foo.cpp  libtestlib.map.txt  testlib.cpp
tests/device/trivial_exception_catch/: CMakeLists.txt
tests/device/trivial_exception_catch/jni/: Android.mk  Application.mk  throw.cpp
tests/device/tsan_smoke/: test_config.py
tests/device/tsan_smoke/jni/: Android.mk  Application.mk  tsan_tiny_race_test.cc
tests/device/vulkan/: test_config.py
tests/device/wait/: test_config.py
tests/device/weak_symbols/: test_config.py
tests/device/weak_symbols/jni/: Android.mk  (+1 more)
tests/device/weak_symbols_build_support/: CMakeLists.txt  test_config.py
tests/device/weak_symbols_build_support/jni/: Android.mk  weak_symbols.cpp
tests/device/weak_symbols_off_by_default/: test_config.py
tests/device/weak_symbols_unguarded_availability/: test_config.py
tests/device/yasm/: test_config.py
tests/ndk-stack/: ndk_stack_systemtest.py  ndk_stack_unittest.py
tests/ndk-stack/files/: backtrace.txt  expected.txt  hwasan.txt  multiple.txt  test.apk
tests/pytest/ndkstack/: test_systemtest.py
wrap.sh/: asan.sh
(+43 files in other folders)
